syntax= "proto3";


service RegisterService{
    rpc Signup(RegisterData) returns (UserId){}
}

message UUID{
    int64 value = 1;
}

message RegisterData{
  string login =1;
  string password =2;
}

message UserId{
    UUID user_id = 1;
}